--- a/writing_functions.Rmd
+++ b/writing_functions.Rmd
@@ -297,6 +297,22 @@ f(x = y)
 
 
 
+## Functions as arguments
+
+```{r}
+my_summary = function(x, summ_func) {
+  
+  summ_func(x)
+  
+}
+
+x_vec = rnorm(100, 3, 7)
+
+mean(x_vec)
+median(x_vec)
+
+my_summary(x_vec, IQR)
+```
 
 
 
