--- a/iteration_and_listcols.Rmd
+++ b/iteration_and_listcols.Rmd
@@ -115,12 +115,23 @@ for (i in 1:4) {
 
 
 
+## Let's try map!
+
+
+```{r}
+output = map(list_norm, mean_and_sd)
+```
 
 
 
+What if we want a different function..?
 
 
+```{r}
+output = map(list_norm, IQR)
+```
 
+Good example that you can write functions within functions.
 
 
 
