--- a/iteration_and_listcols.Rmd
+++ b/iteration_and_listcols.Rmd
@@ -134,7 +134,67 @@ output = map(list_norm, IQR)
 Good example that you can write functions within functions.
 
 
+Can make map spit out things that are not lists
 
+```{r}
+output = map_dbl(list_norm, median, .id = "input")
+```
+
+
+Can make output into one dataframe 
+```{r}
+output = map_df(list_norm, mean_and_sd, .id = "input")
+```
+
+.id pulls the input titles into a new column
+
+## List Columns!
+
+```{r}
+listcol_df = 
+  tibble(
+    name = c("a", "b", "c", "d"),
+    samp = list_norm
+  )
+```
+
+
+
+```{r}
+listcol_df %>% pull(name)
+listcol_df %>%  pull(samp)
+
+listcol_df %>% 
+  filter(name == "a")
+```
+
+Let's try some operations 
+
+```{r}
+mean_and_sd(listcol_df$samp[[1]])
+mean_and_sd(listcol_df$samp[[2]])
+mean_and_sd(listcol_df$samp[[3]])
+mean_and_sd(listcol_df$samp[[4]])
+
+```
+
+
+Can I just... map?
+
+```{r}
+map(listcol_df$samp, mean_and_sd)
+```
+
+
+So... can I add a list column?
+
+```{r}
+listcol_df = 
+  listcol_df %>% 
+  mutate(
+    summary = map(samp, mean_and_sd),
+    medians= map_dbl(samp, median))
+```
 
 
 
